3 try to fix bottom white space

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -415,7 +415,6 @@
     border: none;
     text-align: center;
     grid-template-columns: 250px;
-    height: 100%;
     justify-content: center;
     align-items: center;
     margin-top: 100px;
